ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hina-secure-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hina-dashboard-service # Ya jo bhi aap ki service ka naam hai
            port:
              number: 80
